--- a/jj.html
+++ b/jj.html
@@ -27,28 +27,28 @@
         </button>
       </div>
       <!-- Navbar for larger screens -->
-      <div class="hidden md:flex md:items-center md:justify-between md:w-auto md:order-1" id="navbar-sticky">
+      <div class="hidden md: flex md:items-center md:justify-between md:w-auto md:order-1" id="navbar-sticky">
         <ul class="flex flex-col p-4 md:p-0 mt-4 font-medium border border-gray-100 rounded-lg bg-gray-50 md:space-x-8 rtl:space-x-reverse md:flex-row md:mt-0 md:border-0 md:bg-white dark:bg-gray-800 md:dark:bg-gray-900 dark:border-gray-700">
           <li>
-            <a href="#" class="block py-2 px-3 text-gray-900 rounded hover:bg-gray-100 md:bg-transparent md:text-blue-700 md:p-0 md:dark:text-blue-500 dark:text-white dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent dark:border-gray-700" aria-current="page">Home</a>
+            <a href="#" class=" block py-2 px-3 text-gray-900 rounded hover:bg-gray-100 md:bg-transparent md:text-blue-700 md:p-0 md:dark:text-blue-500 dark:text-white dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent dark:border-gray-700" aria-current="page">Home</a>
           </li>
           <li>
-            <a href="#" class="block py-2 px-3 text-gray-900 rounded hover:bg-gray-100 md:bg-transparent md:text-blue-700 md:p-0 md:dark:text-blue-500 dark:text-white dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent dark:border-gray-700">About</a>
+            <a href="#" class=" block py-2 px-3 text-gray-900 rounded hover:bg-gray-100 md:bg-transparent md:text-blue-700 md:p-0 md:dark:text-blue-500 dark:text-white dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent dark:border-gray-700">About</a>
           </li>
           <li>
-            <a href="#" class="block py-2 px-3 text-gray-900 rounded hover:bg-gray-100 md:bg-transparent md:text-blue-700 md:p-0 md:dark:text-blue-500 dark:text-white dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent dark:border-gray-700">Services</a>
+            <a href="#" class=" block py-2 px-3 text-gray-900 rounded hover:bg-gray-100 md:bg-transparent md:text-blue-700 md:p-0 md:dark:text-blue-500 dark:text-white dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent dark:border-gray-700">Services</a>
           </li>
           <li>
-            <a href="#" class="block py-2 px-3 text-gray-900 rounded hover:bg-gray-100 md:bg-transparent md:text-blue-700 md:p-0 md:dark:text-blue-500 dark:text-white dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent dark:border-gray-700">Pricing</a>
+            <a href="#" class=" block py-2 px-3 text-gray-900 rounded hover:bg-gray-100 md:bg-transparent md:text-blue-700 md:p-0 md:dark:text-blue-500 dark:text-white dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent dark:border-gray-700">Pricing</a>
           </li>
           <li>
-            <a href="#" class="block py-2 px-3 text-gray-900 rounded hover:bg-gray-100 md:bg-transparent md:text-blue-700 md:p-0 md:dark:text-blue-500 dark:text-white dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent dark:border-gray-700">Portfolio</a>
+            <a href="#" class=" block py-2 px-3 text-gray-900 rounded hover:bg-gray-100 md:bg-transparent md:text-blue-700 md:p-0 md:dark:text-blue-500 dark:text-white dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent dark:border-gray-700">Portfolio</a>
           </li>
           <li>
-            <a href="#" class="block py-2 px-3 text-gray-900 rounded hover:bg-gray-100 md:bg-transparent md:text-blue-700 md:p-0 md:dark:text-blue-500 dark:text-white dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent dark:border-gray-700">Blog</a>
+            <a href="#" class=" block py-2 px-3 text-gray-900 rounded hover:bg-gray-100 md:bg-transparent md:text-blue-700 md:p-0 md:dark:text-blue-500 dark:text-white dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent dark:border-gray-700">Blog</a>
           </li>
           <li>
-            <a href="#" class="block py-2 px-3 text-gray-900 rounded hover:bg-gray-100 md:bg-transparent md:text-blue-700 md:p-0 md:dark:text-blue-500 dark:text-white dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent dark:border-gray-700">Contact Us</a>
+            <a href="#" class=" block py-2 px-3 text-gray-900 rounded hover:bg-gray-100 md:bg-transparent md:text-blue-700 md:p-0 md:dark:text-blue-500 dark:text-white dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent dark:border-gray-700">Contact Us</a>
           </li>
         </ul>
       </div>
@@ -73,15 +73,15 @@
     <div class="relative overflow-hidden rounded-lg h-full">
       <!-- Item 1 -->
       <div class="absolute inset-0 duration-700 ease-in-out carousel-item active" data-carousel-item>
-        <img src="images/banner/H-1.webp" class="w-full h-full object-cover" alt="Carousel Image 1">
+        <img src="H-1.webp" class="w-full h-full object-cover" alt="Carousel Image 1">
       </div>
       <!-- Item 2 -->
       <div class="absolute inset-0 duration-700 ease-in-out carousel-item" data-carousel-item>
-        <img src="images/banner/H-2.webp" class="w-full h-full object-cover" alt="Carousel Image 2">
+        <img src="H-2.webp" class="w-full h-full object-cover" alt="Carousel Image 2">
       </div>
       <!-- Item 3 -->
       <div class="absolute inset-0 duration-700 ease-in-out carousel-item" data-carousel-item>
-        <img src="images/banner/H-3.webp" class="w-full h-full object-cover" alt="Carousel Image 3">
+        <img src="H-3.webp" class="w-full h-full object-cover" alt="Carousel Image 3">
       </div>
     </div>
   </div>
